--- a/views/add_bookmark.erb
+++ b/views/add_bookmark.erb
@@ -1,5 +1,6 @@
 <h1>Add Bookmark</h1>
 <form action="/add_bookmark" method="post">
+  <input type="text" name="title">
   <input type="text" name="url">
   <input type="submit" value="Submit">
 </form>
